--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
       - main
 permissions:
   contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -18,5 +19,5 @@ jobs:
         with:
           key: ${{ github.ref }}
           path: .cache
-      - run: pip instan mkdpcs-material
-      - run: mkdp_cs gh-deploy -force
+      - run: pip instanll mkdocs-material
+      - run: mkdocs gh-deploy --force
